# google-slidebot

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  slidebot.py
docs/plans/: 2025-01-25-slidebot-design.md  2025-01-25-slidebot-implementation.md
src/google_slidebot/: __init__.py  cli.py  config.py  slides.py  tui.py  zoom_chat.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_slides.py  test_tui.py  test_zoom_chat.py
